swagger updates not working
