# controllers/tasks.js
@@ -15,7 +15,7 @@ exports.getAllTasks = async (req, res) => {
   } catch (err) {
     res.status(404).json({
       status: "fail",
-      message: err,
+      message: "Unable to get all tasks",
     });
   }
 };
@@ -30,12 +30,14 @@ exports.getSingleTask = async (req, res) => {
   } catch (err) {
     res.status(404).json({
       status: "fail",
-      message: err,
+      message: "Unable to get task",
     });
   }
 };
 
 exports.createTask = async (req, res) => {
+  console.log(req.body);
+
   try {
     const newTask = await Task.create(req.body);
     res.status(201).json({
@@ -47,7 +49,7 @@ exports.createTask = async (req, res) => {
   } catch (err) {
     res.status(400).json({
       status: "fail",
-      message: err,
+      message: "Unable to create task. Please try again.",
     });
   }
 };
@@ -57,7 +59,7 @@ exports.updateTask = async (req, res) => {
       new: true,
       runValidators: true,
     });
-    res.status(200).json({
+    res.status(204).json({
       status: "success",
       data: {
         task,
@@ -66,7 +68,7 @@ exports.updateTask = async (req, res) => {
   } catch (err) {
     res.status(404).json({
       status: "fail",
-      message: err,
+      message: "Unable to update task. Please try again.",
     });
   }
 };
@@ -75,124 +77,14 @@ exports.deleteTask = async (req, res) => {
   try {
     await Task.findByIdAndDelete(req.params.id);
 
-    res.status(204).json({
+    res.status(200).json({
       status: "success",
       data: null,
     });
   } catch (err) {
     res.status(404).json({
       status: "fail",
-      message: err,
+      message: "Some error ocurred while deleting task. Please try again.",
     });
   }
 };
-
-////////////////////////
-
-// const mongodb = require("../db/connect");
-// const ObjectId = require("mongodb").ObjectId;
-
-// const getTasks = async (req, res) => {
-//   const result = await mongodb
-//     .getDb()
-//     .db("project2")
-//     .collection("tasks")
-//     .find();
-//   result.toArray().then((lists) => {
-//     res.setHeader("Content-Type", "application/json");
-//     res.status(200).json(lists);
-//   });
-// };
-
-// const getSingleTask = async (req, res) => {
-//   const taskId = new ObjectId(req.params.id);
-//   const result = await mongodb
-//     .getDb()
-//     .db("project2")
-//     .collection("tasks")
-//     .find({ _id: taskId });
-//   result.toArray().then((lists) => {
-//     res.setHeader("Content-Type", "application/json");
-//     res.status(200).json(lists[0]);
-//   });
-// };
-
-// const createTask = async (req, res) => {
-//   const task = {
-//     activity: req.body.activity,
-//     duration: req.body.duration,
-//     date: req.body.date,
-//     time: req.body.time,
-//     place: req.body.place,
-//     description: req.body.description,
-//     priority: req.body.priority,
-//   };
-
-//   const response = await mongodb
-//     .getDb()
-//     .db("project2")
-//     .collection("tasks")
-//     .insertOne(task);
-//   if (response.acknowledged) {
-//     res.status(201).json(response);
-//   } else {
-//     res
-//       .status(500)
-//       .json(
-//         response.error || "Some error ocurred while creating the new task."
-//       );
-//   }
-// };
-
-// const updateTask = async (req, res) => {
-//   const userId = new ObjectId(req.params.id);
-//   const task = {
-//     activity: req.body.activity,
-//     duration: req.body.duration,
-//     date: req.body.date,
-//     time: req.body.time,
-//     place: req.body.place,
-//     description: req.body.description,
-//     priority: req.body.priority,
-//   };
-//   const response = await mongodb
-//     .getDb()
-//     .db("project2")
-//     .collection("tasks")
-//     .replaceOne({ _id: userId }, task);
-//   console.log(response);
-//   if (response.modifiedCount > 0) {
-//     res.status(204).send();
-//   } else {
-//     res
-//       .status(500)
-//       .json(response.error || "Some error occurred while updating the task.");
-//   }
-// };
-
-// const deleteTask = async (req, res) => {
-//   const userId = new ObjectId(req.params.id);
-//   const response = await mongodb
-//     .getDb()
-//     .db("project2")
-//     .collection("tasks")
-//     .remove({ _id: userId }, true);
-//   console.log(response);
-//   if (response.deletedCount > 0) {
-//     res.status(204).send();
-//   } else {
-//     res
-//       .status(500)
-//       .json(
-//         response.error ||
-//           "We weren't unable to remove the task. Please try again."
-//       );
-//   }
-// };
-// module.exports = {
-//   getTasks,
-//   getSingleTask,
-//   createTask,
-//   updateTask,
-//   deleteTask,
-// };
